# DHCalc

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
examples/: stanford_arm.dh.tsv
include/dhcalc/: dh_table_parser.hpp  kinematics.hpp
include/internal/: dh_table_parser_impl.hpp  utility.hpp
src/: dh_calculator.cpp  dh_table_parser.cpp  main.cpp
tests/fk/: unit.cpp
tests/parser/: unit.cpp
tests/stress/: stress_test.cpp
