cmake_minimum_required(VERSION 3.20)

project(DHCalc VERSION 0.0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(DHCALC_BUILD_TESTS "Build DHCalc tests" ON)

# ── Eigen ────────────────────────────────────────────────────────────────────
find_package(Eigen3 REQUIRED)
message(STATUS "[DHCalc] Found Eigen ${Eigen3_VERSION}")

# ── argparse (header-only, fetched automatically) ────────────────────────────
include(FetchContent)
FetchContent_Declare(
    argparse
    GIT_REPOSITORY https://github.com/p-ranav/argparse.git
    GIT_TAG        v3.1
)
FetchContent_MakeAvailable(argparse)
message(STATUS "[DHCalc] Fetched argparse v3.1")

# ── rapidcsv (header-only, fetched automatically) ────────────────────────────
set(CMAKE_BUILD_TYPE Release)
FetchContent_Declare(
    rapidcsv
    GIT_REPOSITORY https://github.com/d99kris/rapidcsv.git
    GIT_TAG        v8.83
    CMAKE_ARGS
        -DCMAKE_BUILD_TYPE:STRING=Release
)
FetchContent_MakeAvailable(rapidcsv)
message(STATUS "[DHCalc] Fetched rapidcsv v8.83")

# ── Generate empty DH table (0 joints) ──────────────────────────────────────
file(MAKE_DIRECTORY "${PROJECT_SOURCE_DIR}/examples")
set(DHCALC_EMPTY_TABLE_PATH "${PROJECT_SOURCE_DIR}/examples/empty.dh.tsv")

message(STATUS "[DHCalc] Generating empty DH table (0 joints)")
message(STATUS "[DHCalc]   Path  : ${DHCALC_EMPTY_TABLE_PATH}")

file(WRITE "${DHCALC_EMPTY_TABLE_PATH}"
    "# Empty DH table (0 joints) — auto-generated by CMake at configure time\n"
    "joint\tθ\tα\tr\td\n"
)
message(STATUS "[DHCalc] Empty DH table written successfully")

# ── Library ──────────────────────────────────────────────────────────────────
add_library(
    dhcalc_lib
    src/dh_calculator.cpp
    src/dh_table_parser.cpp
)

target_include_directories(dhcalc_lib PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(dhcalc_lib PUBLIC Eigen3::Eigen rapidcsv)
target_compile_features(dhcalc_lib PUBLIC cxx_std_20)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(dhcalc_lib PRIVATE -Wall -Wextra -Wpedantic)
endif()

# ── Executable ───────────────────────────────────────────────────────────────
add_executable(dhcalc src/main.cpp)
target_link_libraries(dhcalc PRIVATE dhcalc_lib argparse::argparse)

# ── Tests ────────────────────────────────────────────────────────────────────
if(DHCALC_BUILD_TESTS)
    enable_testing()
    find_package(GTest REQUIRED)

    # Parser tests
    add_executable(dhcalc_parser_tests tests/parser/unit.cpp)
    target_link_libraries(dhcalc_parser_tests PRIVATE dhcalc_lib GTest::gtest_main)
    target_compile_definitions(dhcalc_parser_tests PRIVATE
        PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR}")

    # Forward-kinematics tests
    add_executable(dhcalc_fk_tests tests/fk/unit.cpp)
    target_link_libraries(dhcalc_fk_tests PRIVATE dhcalc_lib GTest::gtest_main)

    # Stress tests
    add_executable(dhcalc_stress_tests tests/stress/stress_test.cpp)
    target_link_libraries(dhcalc_stress_tests PRIVATE dhcalc_lib GTest::gtest_main)

    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
        target_compile_options(dhcalc_parser_tests  PRIVATE -Wall -Wextra -Wpedantic)
        target_compile_options(dhcalc_fk_tests      PRIVATE -Wall -Wextra -Wpedantic)
        target_compile_options(dhcalc_stress_tests  PRIVATE -Wall -Wextra -Wpedantic)
    endif()

    include(GoogleTest)
    gtest_discover_tests(dhcalc_parser_tests)
    gtest_discover_tests(dhcalc_fk_tests)
    gtest_discover_tests(dhcalc_stress_tests)
endif()
